# aoc2021

./: aoc2021.cabal
app/: Main.hs
app/days/: Day02.hs  Day03.hs  Day04.hs  day02b.hs
src/: Day01.hs  Day02.hs  Day02_02.hs  Day03.hs  Day04.hs  Day05.hs
test/: Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs
