cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

synopsis: Advent of Code 2021 Solutions

author:             Mitchell Horning
maintainer:         mitchell@horning.email

executable aoc2021
    main-is:          Main.hs

    build-depends:    base ^>=4.15.0.0,
                      hspec,
    hs-source-dirs:   app
    default-language: Haskell2010
