cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

synopsis: Advent of Code 2021 Solutions

author:             Mitchell Horning
maintainer:         mitchell@horning.email

library
  hs-source-dirs:
    src
  build-depends:    base ^>=4.15.0.0,
                    containers >= 0.6.4.1,
                    hspec,
                    split,
                    text >= 1.2.4.1
  exposed-modules:
    Day01
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      src  
    , test
  ghc-options: -Wall
  build-depends: base ==4.*
               , containers >= 0.6.4.1
               , hspec ==2.*
               , split
               , text >= 1.2.4.1
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
     